--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["io"] }
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.17", features = ["env-filter", "default"]}
+reqwest = "0.11.22"
