--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ dotenvy = "0.15.7"
 thiserror = "1.0.48"
 usb = "0.2.2"
 serde = { version = "1.0.188", features = ["derive"] }
-tokio-serial = { version = "5.4.4", features = ['bytes', "default", "libudev", "codec"] }
+serialport = { version = "4.2.2" }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["io"] }
 tracing = "0.1.37"
