--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.17", features = ["env-filter", "default"]}
 reqwest = "0.11.22"
 async-trait = "0.1.74"
+log = "0.4.20"
