--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 tokio-serial = { version = "5.4.4" }
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["io"] }
+awc = "3.2.0"
 tracing = "0.1.37"
 tracing-subscriber = {version = "0.3.17", features = ["env-filter", "default"]}
 async-trait = "0.1.74"
