--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -48,6 +48,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: list dir
+      run: |
+       ls ${{github.workspace}}
+
     - name: Set up Git
       run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
@@ -70,6 +74,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /target/release/printerlynx_printer_agent  
+        asset_path: ./target/release/printerlynx_printer_agent  
         asset_name: printerlynx_printer_agent  
         asset_content_type: application/octet-stream
