--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -74,6 +74,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src/target/release/printerlynx_printer_agent  
+        asset_path: ${{github.workspace}}/src/target/release/printerlynx_printer_agent  
         asset_name: printerlynx_printer_agent  
         asset_content_type: application/octet-stream
